# benchmarking-wasm-ewasm-evm

./: Dockerfile  README.md  ecadd_cdetrio1.wasm  ecadd_cdetrio10.wasm  ecadd_cdetrio11.wasm  ecadd_cdetrio12.wasm  ecadd_cdetrio13.wasm  ecadd_cdetrio2.wasm  ecadd_cdetrio3.wasm  ecadd_cdetrio5.wasm  ecadd_cdetrio6.wasm  ecadd_cdetrio7.wasm  ecadd_cdetrio8.wasm  ecadd_cdetrio9.wasm  ecadd_chfast1.wasm  ecadd_chfast2.wasm  ecmul_cdetrio1.wasm  ecmul_chfast1.wasm  ecmul_chfast2.wasm  ecmul_chfast3.wasm  readme
bench-ewasm/ewasm-code/mul256/: Cargo.toml
bench-ewasm/ewasm-code/mul256/src/: lib.rs
bench-ewasm/meterracer/: bench_ewasm.sh  metering-bench-v8.js  meteringherabencher.sh  meteringprep.sh  prepgethwagoncode.py  runherav8bench.py
bench-wasm-engines/: Dockerfile  bench_wasm_and_native.sh  benchevmrace.sh  benchnativerust_prepwasm.py  inputvectors  main.py  rust-code
bench-wasm-engines/project/: settings.py
bench/vm/: Dockerfile
bencher/: ewasm.py
bencher/project/: VMDescriptor.py  WasmVMBencher.py  settings.py
enginerunner/: main.py
enginerunner/project/: settings.py
evmrace/: Dockerfile  benchevm.py  benchparityprecompiles.py
evmrace/ckbvm/: blake2b-input.json  blake2b.c  blake2b.h  bn256g2.cpp  bn256g2_riscv  bn256g2_test.cpp  bn256mul-input-processed.hex  bn256mul-input.json  bn256mul-output-processed.hex  bn256mul-output.json  expected1-processed.hex  expected1.hex  expected2-processed.hex  expected2.hex  expected3-processed.hex  expected3.hex  input1.hex  input2.hex  input3.hex
wasmfiles/: guido-fuzzer-find-2-norotates.wasm
(+59 files in other folders)
