[package]
name = "ewasm-bench-mul256"
version = "0.1.0"
license = "Apache-2.0"
description = "Ethereum Mul256 benchmark in Rust"
publish = false
edition = "2018"

[dependencies]
bigint = "4.4.1"
ewasm_api = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.2"

[lib]
name = "mul256_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"